[RED] add test for new unavailable schedule state